[package]
name = "rsa"
version = "0.1.0"
authors = ["Yutaro Mori <me@yutaromori.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.2.5", features = ["rand"] }
num-bigint-dig = { version = "0.6.0", features = ["prime"] }
num-traits = "0.2.11"
rand = "0.7.3"